# zolvery

./: .eslintrc.json  .gitignore  .npmrc  .pnpmfile.cjs  .prettierignore  .prettierrc  .turboignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  commitlint.config.js  compose.yml  lerna.json  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsdoc.json  turbo.json
.changeset/: fresh-avocados-drop.md  giant-ears-clap.md  shy-socks-care.md
.cicadas/: config.json  index.json  registry.json
.devcontainer/: devcontainer.json
.github/instructions/: client.instructions.md  main.instructions.md  server.instructions.md  tools.instructions.md  ts.instructions.md
.github/prompts/: example.prompt.md
.github/workflows/: build-android.yml  docs.yml  (+3 more)
.husky/: pre-commit
apps/: package.json
crates/blobstore/: Cargo.toml  README.md
crates/blobstore/src/: blobstore.rs  container.rs  lib.rs  storage.rs  stream.rs  types.rs  values.rs
docs/: ARCHITECTURE.md  ICON.md  PROMPT.md  README.md  ROLLOVER_TIMEZONE.md  TASKS.md  design.afdesign  example-app-configurations.md  implementation-summary.md  leaderboard-scoring-types.md  ui-architecture.drawio
research/: README.md
scripts/: bump-mobile-version.sh  docs.ts  get-docker-logs.sh  get-metrics-value.ts  gh-diff.ts  init-aws.sh  init-docker-shell.sh  kill-on-port.sh  link-patchwork.sh  package.json  run  setup-local-aws.sh  start-dev.ts  start-local.sh  start-turn.js  tsconfig.json
specs/: apps.md  auth.md  boardgameioai.md  client.md  events.md  i18n.md  rollover-timezone.md
(+247 files in other folders)
