[package]
name = "blobstore-rs"
version = "0.1.0"
edition = "2021"
description = "WASI blobstore implementation with embedded in-memory storage"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen = "0.16"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
parking_lot = "0.12"

[dependencies.wit-bindgen-rt]
version = "0.16"
features = ["bitflags"]

[package.metadata.component]
package = "wasi:blobstore@0.2.0-draft"

[package.metadata.component.dependencies]